--- a/Abhi spreadsheet.html
+++ b/Abhi spreadsheet.html
@@ -4,7 +4,7 @@
     <title>Abhi spreadsheet</title>
 
     <script src="mustache.js" type="text/javascript"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="jquery-2.1.1.min.js"></script>
     <script src="spreadsheet.js" type="text/javascript"></script>
 </head>
 <body>
@@ -17,7 +17,7 @@
                     <thead>
                     <tr>
                         {{#coloumnHeads}}
-                        <th>{{name}}</th>
+                        <th>{{.}}</th>
                         {{/coloumnHeads}}
                     </tr>
                     </thead>
